force-app/main/default/objects/Account/fields/Gateway__c.field-meta.xml
<CustomField>
    <fullName>Gateway__c</fullName>
    <label>Gateway</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AuthorizeNet</fullName>
            </value>
            <value>
                <fullName>CardConnect</fullName>
            </value>
            <value>
                <fullName>CybersourceSoap</fullName>
            </value>
            <value>
                <fullName>EVO</fullName>
            </value>
            <value>
                <fullName>First Data</fullName>
            </value>
            <value>
                <fullName>FirstDataGGe4</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>NMI Payment</fullName>
            </value>
            <value>
                <fullName>PayflowPro</fullName>
            </value>
            <value>
                <fullName>Paymentech</fullName>
            </value>
            <value>
                <fullName>Square</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>USAePay</fullName>
            </value>
            <value>
                <fullName>USAePaySOAP</fullName>
            </value>
            <value>
                <fullName>EVO exception</fullName>
            </value>
            <value>
                <fullName>Authorize.net</fullName>
                <isActive>false</isActive>
                <label>Authorize.net</label>
            </value>
            <value>
                <fullName>NMIPayment</fullName>
                <isActive>false</isActive>
                <label>NMIPayment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>