force-app/main/default/objects/Account/fields/GP_New_Customer_Form__c.field-meta.xml
<CustomField>
    <fullName>GP_New_Customer_Form__c</fullName>
    <formula>HYPERLINK(&apos;https://www.cavallo.com/assets/sales_assets/NewCustomerInformation2023.pdf&apos;, &apos;https://www.cavallo.com/assets/sales_assets/NewCustomerInformation2023.pdf&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GP - New Customer Form</label>
    <type>Text</type>
</CustomField>