force-app/main/default/objects/Account/fields/GP_Site_ID__c.field-meta.xml
<CustomField>
    <fullName>GP_Site_ID__c</fullName>
    <label>GP Site ID</label>
    <length>55</length>
    <type>Text</type>
</CustomField>