force-app/main/default/objects/Account/fields/GP_version__c.field-meta.xml
<CustomField>
    <fullName>GP_version__c</fullName>
    <label>GP version</label>
    <length>55</length>
    <type>Text</type>
</CustomField>