force-app/main/default/objects/Account/fields/Health_Level__c.field-meta.xml
<CustomField>
    <fullName>Health_Level__c</fullName>
    <label>Health Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Healthy Customer</fullName>
            </value>
            <value>
                <fullName>Satisfied Customer</fullName>
            </value>
            <value>
                <fullName>Low Risk</fullName>
            </value>
            <value>
                <fullName>High Risk</fullName>
            </value>
            <value>
                <fullName>Planned Attrition (Churn)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>