force-app/main/default/objects/Account/fields/Health_Level_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Health_Level_Reasons__c</fullName>
    <label>Health Level Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Migrating to another solution</fullName>
            </value>
            <value>
                <fullName>RFP-Request for Proposal</fullName>
            </value>
            <value>
                <fullName>Product Issues - Features, Functionality, Direction</fullName>
            </value>
            <value>
                <fullName>Financial Constraints</fullName>
            </value>
            <value>
                <fullName>Value of Enhancement</fullName>
            </value>
            <value>
                <fullName>Increasing Adoption/Expanding Footprint</fullName>
            </value>
            <value>
                <fullName>Merger</fullName>
            </value>
            <value>
                <fullName>Positive Customer - Cavallo Relationship</fullName>
            </value>
            <value>
                <fullName>Negative Customer - Cavallo Relationship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>