force-app/main/default/objects/Account/fields/Hubspot_Lifecycle_Stage__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_Lifecycle_Stage__c</fullName>
    <label>Hubspot Lifecycle Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
                <default>true</default>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>Marketing Qualified Lead</fullName>
            </value>
            <value>
                <fullName>Sales Accepted Lead</fullName>
            </value>
            <value>
                <fullName>Partner Qualified Lead</fullName>
            </value>
            <value>
                <fullName>Sales Qualified Opportunity</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Churned</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>