force-app/main/default/objects/Account/fields/Hubspot_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_Record_ID__c</fullName>
    <description>For Hubspot sync to capture the Hubspot Record ID</description>
    <label>Hubspot Record ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>