force-app/main/default/objects/Account/fields/ia_crm__Bill_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Bill_to_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill to Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>BilltoContact</relationshipName>
    <type>Lookup</type>
</CustomField>