force-app/main/default/objects/Account/fields/ia_crm__Credit_limit__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Credit_limit__c</fullName>
    <label>Credit limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>