force-app/main/default/objects/Account/fields/ia_crm__Email_ID__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Email_ID__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>