force-app/main/default/objects/Account/fields/ia_crm__Intacct_Entity__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Intacct_Entity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Only for M-console</description>
    <label>Intacct Entity</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <filterItems>
            <field>ia_crm__Intacct_Entity__c.ia_crm__Entity_Type__c</field>
            <operation>equals</operation>
            <value>Entity</value>
        </filterItems>
        <filterItems>
            <field>ia_crm__Intacct_Entity__c.ia_crm__Entity_Type__c</field>
            <operation>equals</operation>
            <value>Top Level</value>
        </filterItems>
        <filterItems>
            <field>ia_crm__Intacct_Entity__c.ia_crm__Hidden__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>ia_crm__Intacct_Entity__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts_del</relationshipName>
    <type>Lookup</type>
</CustomField>