force-app/main/default/objects/Account/fields/ia_crm__Intacct_Entity_Id__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Intacct_Entity_Id__c</fullName>
    <description>Formula field used to avoid making a separate query to get the entity id at sync.</description>
    <formula>IF( ISPICKVAL( ia_crm__Intacct_Entity__r.ia_crm__Entity_Type__c , &apos;Entity&apos;),  ia_crm__Intacct_Entity__r.ia_crm__Intacct_Entity_ID__c , &apos;&apos;)</formula>
    <label>Intacct Entity Id</label>
    <type>Text</type>
</CustomField>