force-app/main/default/objects/Account/fields/ia_crm__IntacctID__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__IntacctID__c</fullName>
    <label>Intacct Customer ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>