force-app/main/default/objects/Account/fields/ia_crm__Reseller_Type__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Reseller_Type__c</fullName>
    <description>This field should not be added on the layouts.</description>
    <inlineHelpText>This field is automatically populated by internal functionalities, modifying the value will impact the Reseller flows.</inlineHelpText>
    <label>Reseller Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>