force-app/main/default/objects/Account/fields/ia_crm__Sales_rep__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Sales_rep__c</fullName>
    <label>Sales rep ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>