force-app/main/default/objects/Account/fields/ia_crm__SalesRep__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__SalesRep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales rep</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ia_crm__Employees__c.ia_crm__Hidden__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>ia_crm__Employees__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>