force-app/main/default/objects/Account/fields/ia_crm__Ship_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Ship_to_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship to Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Ship to Contact)</relationshipLabel>
    <relationshipName>ShiptoContact</relationshipName>
    <type>Lookup</type>
</CustomField>