force-app/main/default/objects/Account/fields/ia_crm__Taxable__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Taxable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Taxable</label>
    <type>Checkbox</type>
</CustomField>