force-app/main/default/objects/Account/fields/ia_crm__Territory_ID__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Territory_ID__c</fullName>
    <label>Territory ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>