force-app/main/default/objects/Account/fields/Implementation_Approach__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Approach__c</fullName>
    <label>Implementation Approach</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner lead</fullName>
            </value>
            <value>
                <fullName>SalesPad lead</fullName>
            </value>
            <value>
                <fullName>Partner future opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>