force-app/main/default/objects/Account/fields/Industry_Name__c.field-meta.xml
<CustomField>
    <fullName>Industry_Name__c</fullName>
    <description>Use this industry field so that HubSpot holds the picklist values coming in from ZoomInfo. The list is over 300 long and continues to grow.</description>
    <label>Industry Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>