force-app/main/default/objects/Account/fields/Initial_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Initial_Purchase__c</fullName>
    <label>Original Purchase Date</label>
    <type>Date</type>
</CustomField>