force-app/main/default/objects/Account/fields/ISV_Utilization__c.field-meta.xml
<CustomField>
    <fullName>ISV_Utilization__c</fullName>
    <label>Alliance Partners</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Avalara</fullName>
            </value>
            <value>
                <fullName>Binary Stream</fullName>
            </value>
            <value>
                <fullName>Blue Moon</fullName>
            </value>
            <value>
                <fullName>Envisage Software Solutions</fullName>
            </value>
            <value>
                <fullName>KEY2ACT</fullName>
            </value>
            <value>
                <fullName>Kwiktag</fullName>
            </value>
            <value>
                <fullName>Magento</fullName>
            </value>
            <value>
                <fullName>Nodus/Payfabric</fullName>
            </value>
            <value>
                <fullName>PaceJet</fullName>
            </value>
            <value>
                <fullName>Shopify</fullName>
            </value>
            <value>
                <fullName>SPS Commerce</fullName>
            </value>
            <value>
                <fullName>Square</fullName>
            </value>
            <value>
                <fullName>Thomson Reuters</fullName>
            </value>
            <value>
                <fullName>Vicinity Manufacturing</fullName>
            </value>
            <value>
                <fullName>Highjump</fullName>
                <isActive>false</isActive>
                <label>Highjump</label>
            </value>
            <value>
                <fullName>Panatrack</fullName>
                <isActive>false</isActive>
                <label>Panatrack</label>
            </value>
            <value>
                <fullName>TrueCommerce</fullName>
                <isActive>false</isActive>
                <label>TrueCommerce</label>
            </value>
            <value>
                <fullName>iSolutions</fullName>
                <isActive>false</isActive>
                <label>iSolutions</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>