force-app/main/default/objects/Account/fields/Job_Costing__c.field-meta.xml
<CustomField>
    <fullName>Job_Costing__c</fullName>
    <label>Job Costing</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Job_Costing</valueSetName>
    </valueSet>
</CustomField>