force-app/main/default/objects/Account/fields/Last_Human_Contact__c.field-meta.xml
<CustomField>
    <fullName>Last_Human_Contact__c</fullName>
    <description>Timestamp of the most recent qualifying EAC email or call activity from a tracked user, excluding invoice-related activity.</description>
    <label>Last Human Contact</label>
    <type>DateTime</type>
</CustomField>