force-app/main/default/objects/Account/fields/Last_Human_Contact_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Human_Contact_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The tracked user who performed the most recent qualifying EAC email or call activity on this Account.</description>
    <label>Last Human Contact By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts_Last_Human_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>