force-app/main/default/objects/Account/fields/Last_Opp_Date2__c.field-meta.xml
<CustomField>
    <fullName>Last_Opp_Date2__c</fullName>
    <formula>Last_Opp_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Created Opp Date.</label>
    <type>Date</type>
</CustomField>