force-app/main/default/objects/Account/fields/Last_Opp_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Opp_Date__c</fullName>
    <label>Last Opp Date</label>
    <summarizedField>Opportunity.CreatedDate</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>