force-app/main/default/objects/Account/fields/Last_Partner_Review_Completed__c.field-meta.xml
<CustomField>
    <fullName>Last_Partner_Review_Completed__c</fullName>
    <label>Last Partner Review Completed</label>
    <type>Date</type>
</CustomField>