force-app/main/default/objects/Account/fields/Last_Rev_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Rev_Date__c</fullName>
    <label>Last Closed-Won Date</label>
    <summarizedField>Opportunity.CloseDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Subtype__c</field>
        <operation>notEqual</operation>
        <value>Renewal</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>