force-app/main/default/objects/Account/fields/Last_Soft_Opp_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Soft_Opp_Created_Date__c</fullName>
    <label>Last Soft Opp Created Date</label>
    <summarizedField>Opportunity.CreatedDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Software__c</field>
        <operation>greaterOrEqual</operation>
        <value>1</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Reseller, Standard</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>