force-app/main/default/objects/Account/fields/Lead_List_Notes__c.field-meta.xml
<CustomField>
    <fullName>Lead_List_Notes__c</fullName>
    <description>Notes from Shows, Conferences, Webinars, and other lead lists.</description>
    <label>Lead List Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>