force-app/main/default/objects/Account/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <label>AA License Count</label>
    <summaryFilterItems>
        <field>License__c.Software_Module_Name__c</field>
        <operation>contains</operation>
        <value>AutomationAgent</value>
    </summaryFilterItems>
    <summaryForeignKey>License__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>