force-app/main/default/objects/Account/fields/Link_to_Basecamp__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Basecamp__c</fullName>
    <label>Link to Basecamp</label>
    <type>Url</type>
</CustomField>