force-app/main/default/objects/Account/fields/LinkedIn_URL__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_URL__c</fullName>
    <label>LinkedIn URL (clickable)</label>
    <type>Url</type>
</CustomField>