force-app/main/default/objects/Account/fields/LTD_ARR_Sales__c.field-meta.xml
<CustomField>
    <fullName>LTD_ARR_Sales__c</fullName>
    <label>LTD ARR Sales</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>