force-app/main/default/objects/Account/fields/MRR_ROLL_UP__c.field-meta.xml
<CustomField>
    <fullName>MRR_ROLL_UP__c</fullName>
    <label>MRR_ROLL_UP</label>
    <summarizedField>chargebeeapps__CB_Subscription__c.chargebeeapps__MRR__c</summarizedField>
    <summaryForeignKey>chargebeeapps__CB_Subscription__c.chargebeeapps__Company__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>