force-app/main/default/objects/Account/fields/Multi_Channel_Manager__c.field-meta.xml
<CustomField>
    <fullName>Multi_Channel_Manager__c</fullName>
    <label>Multi-Channel Manager</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MultiChannel_Manager</valueSetName>
    </valueSet>
</CustomField>