force-app/main/default/objects/Account/fields/Mutual_Clients2__c.field-meta.xml
<CustomField>
    <fullName>Mutual_Clients2__c</fullName>
    <label># Mutual Clients</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>