force-app/main/default/objects/Account/fields/Mutual_Clients__c.field-meta.xml
<CustomField>
    <fullName>Mutual_Clients__c</fullName>
    <inlineHelpText>Roll up of &quot;Type= &apos;Client - Registered to Partner&apos;&quot; Accounts</inlineHelpText>
    <label># of Clients - Registered to Partner</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>