force-app/main/default/objects/Account/fields/NAICS_Code__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Code__c</fullName>
    <label>SIC Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>