force-app/main/default/objects/Account/fields/New_HubSpot_Lifecycle_Stage__c.field-meta.xml
<CustomField>
    <fullName>New_HubSpot_Lifecycle_Stage__c</fullName>
    <label>** New ** HubSpot Lifecycle Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Marketing Qualified Lead</fullName>
            </value>
            <value>
                <fullName>Sales Accepted Lead</fullName>
            </value>
            <value>
                <fullName>Sales Qualified Opportunity</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Sales Accepted Opportunity</fullName>
                <isActive>false</isActive>
                <label>Sales Accepted Opportunity</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>