force-app/main/default/objects/Account/fields/of_Active_Partner_Client_Relationship__c.field-meta.xml
<CustomField>
    <fullName>of_Active_Partner_Client_Relationship__c</fullName>
    <label># of Active Partner-Client Relationship</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>