force-app/main/default/objects/Account/fields/of_Analytics_Opps__c.field-meta.xml
<CustomField>
    <fullName>of_Analytics_Opps__c</fullName>
    <label># of Analytics Opps</label>
    <summaryFilterItems>
        <field>Opportunity.of_Analytics_Products__c</field>
        <operation>greaterOrEqual</operation>
        <value>1</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won, Closed Lost</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>