force-app/main/default/objects/Account/fields/of_BC_Clients__c.field-meta.xml
<CustomField>
    <fullName>of_BC_Clients__c</fullName>
    <label># of BC Clients</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>