force-app/main/default/objects/Account/fields/of_Cases__c.field-meta.xml
<CustomField>
    <fullName>of_Cases__c</fullName>
    <label># of Support Cases (Rolling Year)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>