force-app/main/default/objects/Account/fields/of_directClients__c.field-meta.xml
<CustomField>
    <fullName>of_directClients__c</fullName>
    <inlineHelpText>Rollup of &quot;Type = &apos;Client - Direct&apos; &quot;Accounts</inlineHelpText>
    <label># of Clients - Direct</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>